# snakemon

./: .gitignore  .readthedocs.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
docs/: Makefile  make.bat
docs/source/: conf.py  docker.rst  faq.rst  index.rst  limitations.rst  usage.rst
docs/source/_static/: custom.css
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: edit-workflow-modal.tsx  workflow-detail.tsx  workflow-table.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  dialog.tsx  input.tsx  textarea.tsx
frontend/src/services/: api.ts
frontend/src/types/: workflow.ts
snakemon_service/: config.py  database.py  main.py  models.py  schemas.py
